syntax = "proto3";

// option java_multiple_files = true;
// option java_package = "api.event_sourced.managment.grpc";

package api.event_sourced.managment;

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";
import "common.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "api.event_sourced.managment.grpc"
  flat_package: true
  single_file: true
  java_conversions: false
  // import: "com.thesamet.pb.MyType"
  // import: "com.thesamet.other._"
  // preamble: "sealed trait BaseMessage"
  // preamble: "sealed trait CommonMessage"
  lenses: true
  getters: true
  retain_source_code_info: false
  no_default_values_in_constructor: false
  preserve_unknown_fields: false
  // enum_value_naming: CAMEL_CASE
  enum_strip_prefix: false
  // bytes_type: "scodec.bits.ByteVector"
  scala3_sources: true
};

service ManagmentService {
    rpc projectionClearOffset(ProjectionIdRequest) returns (api.common.Response) {}
    rpc projectionUpdateOffset(ProjectionUpdateOffsetRequest) returns (api.common.Response) {}
    rpc projectionPause(ProjectionIdRequest) returns (api.common.Response) {}
    rpc projectionResume(ProjectionIdRequest) returns (api.common.Response) {}
    rpc projectionGetOffset(ProjectionIdRequest) returns (OffsetResponse) {}
    rpc projectionIsPaused(ProjectionIdRequest) returns (IsPausedResponse) {}
    
    rpc eventsUpdateAll(EventsUpdateAllRequest) returns (api.common.Response) {}
    
}

message EventsUpdateAllRequest{}

message IsPausedResponse{
  google.protobuf.BoolValue id = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
}

message OffsetResponse{
  google.protobuf.Int64Value value = 1;
}

message ProjectionIdRequest{
  ProjectionId id = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
}

message ProjectionUpdateOffsetRequest{
  ProjectionId id = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
  google.protobuf.Int64Value value = 2 [(scalapb.field).no_box = true, (scalapb.field).required = true];
}

message ProjectionId{
  google.protobuf.StringValue projectionTag = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
  google.protobuf.StringValue targetTag = 2 [(scalapb.field).no_box = true, (scalapb.field).required = true];
  // google.protobuf.Int64Value no = 2 [(scalapb.field).no_box = true, (scalapb.field).required = true];
}
